Tycho: test running out memory (PermGen) give it some more.